# faucet-zcash

./: .dockerignore  .editorconfig  .gitignore  .prettierignore  .prettierrc.json  CHANGELOG.md  Cargo.toml  DEPENDENCIES.md  Makefile  README.md  deny.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: changelog.yaml  ci.yml  deploy-pages.yml  deploy-worker.yml  pr-hygiene.yaml  shellcheck.yaml
crates/faucet-addr-wasm/: Cargo.toml
crates/faucet-addr-wasm/src/: lib.rs
crates/faucet-core/: Cargo.toml
crates/faucet-core/src/: lib.rs
deploy/: .env.example  README.md  docker-compose.yml  faucet-heartbeat.sh  faucet-maintenance.sh  faucet-orchard-generator.sh
docs/: INFRASTRUCTURE.md  cipherscan-negative-balance-report.md
frontend/: .prettierignore  package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.ts
frontend/functions/: _middleware.ts
frontend/functions/api/: [[path]].ts
frontend/src/: app.css  app.d.ts  app.html
frontend/src/lib/: api.ts  theme.svelte.ts  wasm-validator.ts
frontend/src/lib/components/: ThemeToggle.svelte
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/tests/: faucet.spec.ts
signer/: Cargo.toml  Dockerfile
signer/src/: blockcache.rs  config.rs  dblock.rs  error.rs  lib.rs  main.rs  wallet.rs
signer/tests/: api.rs
worker/: Cargo.toml  wrangler.toml
worker/migrations/: 0001_init.sql  0002_faucet_balance.sql  0003_heartbeat.sql
worker/src/: lib.rs
