# Cargo workspace for the Zcash testnet faucet.
#
# Members build for different targets:
#   - crates/faucet-core      : shared, compiles to native AND wasm32
#   - crates/faucet-addr-wasm : wasm-bindgen address validator (frontend)
#   - signer                  : native axum service (holds seed, proves, broadcasts)
#   - worker                  : Cloudflare Worker (wasm32-unknown-unknown)
#
# `worker` and `faucet-addr-wasm` are wasm-only; build them with an explicit
# --target. `default-members` keeps a bare `cargo build` to the native crates so
# wasm-only crates do not break a host build.
[workspace]
resolver = "2"
members = [
    "crates/faucet-core",
    "crates/faucet-addr-wasm",
    "signer",
    "worker",
]
default-members = [
    "crates/faucet-core",
    "signer",
]

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Danny Willems <danny@badaas.be>"]
repository = "https://github.com/dannywillems/faucet-zcash"
rust-version = "1.96"

# All dependencies are declared here and referenced from member crates with
# `{ workspace = true }`, so versions and features are centralized. Grouped by
# role; alphabetical within each group.
[workspace.dependencies]

# Internal crates
faucet-core = { path = "crates/faucet-core" }

# Zcash. The librustzcash crates are pinned to a git rev because the latest
# crates.io pair does not compile together; orchard 0.14 is the latest
# non-yanked crates.io release.
orchard = "0.14"
zcash_address = "0.12.0"
zcash_client_backend = { git = "https://github.com/zcash/librustzcash", rev = "8a0ae6537404bb95d0ce0026d14bab290910bf23", default-features = false, features = ["lightwalletd-tonic-transport", "orchard", "sync", "transparent-inputs"] }
zcash_client_sqlite = { git = "https://github.com/zcash/librustzcash", rev = "8a0ae6537404bb95d0ce0026d14bab290910bf23", features = ["orchard", "transparent-inputs", "unstable"] }
zcash_keys = { git = "https://github.com/zcash/librustzcash", rev = "8a0ae6537404bb95d0ce0026d14bab290910bf23", features = ["orchard", "transparent-inputs"] }
zcash_primitives = { git = "https://github.com/zcash/librustzcash", rev = "8a0ae6537404bb95d0ce0026d14bab290910bf23" }
zcash_proofs = { git = "https://github.com/zcash/librustzcash", rev = "8a0ae6537404bb95d0ce0026d14bab290910bf23" }
zcash_protocol = "0.9.0"
zip32 = "0.2.1"

# Cloudflare Worker runtime
getrandom = { version = "0.3", features = ["wasm_js"] }
worker = { version = "0.8.5", features = ["d1"] }

# Frontend wasm bindings
wasm-bindgen = "0.2.126"

# Signer HTTP service and async runtime
async-trait = "0.1"
axum = "0.8.9"
tokio = { version = "1.52.3", default-features = false, features = ["rt-multi-thread", "macros", "net", "time"] }
tonic = "0.14"
tower = "0.5"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# Crypto, hashing, secrets, mnemonic. sha2 0.10 (not 0.11) so it coexists with
# the prerelease sha2 the git-pinned librustzcash stack pulls via bip32.
bip0039 = { version = "0.12", features = ["std"] }
hex = "0.4.3"
secrecy = "0.8"
sha2 = "0.10"
zeroize = "1.9.0"

# Storage
rusqlite = "0.37"

# RNG
rand = "0.8"

# Errors and logging
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
