[package]
name = "faucet-signer"
version = "0.1.0"
publish = false
description = "Native Zcash faucet signer: holds the seed, builds/proves/signs transparent and Orchard transactions, broadcasts to zcashd."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints.clippy]
all = "warn"

[dependencies]
faucet-core = { workspace = true }
# Signer-specific deps (axum, tokio, zcash_client_backend/sqlite, orchard,
# zcash_primitives, k256, zeroize) are added to [workspace.dependencies] and
# referenced here when the signer is implemented.
