[package]
name = "faucet-signer"
version = "0.1.0"
publish = false
description = "Native Zcash faucet signer: holds the seed, builds/proves/signs transparent and Orchard transactions, broadcasts to zcashd."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints.clippy]
all = "warn"

[dependencies]
axum = { workspace = true }
faucet-core = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zeroize = { workspace = true }
# The Zcash wallet engine deps (zcash_client_backend/sqlite, zcash_primitives,
# orchard, k256) are added to [workspace.dependencies] and referenced here as
# the wallet module is implemented.
