[package]
name = "faucet-signer"
version = "0.1.0"
publish = false
description = "Native Zcash faucet signer: holds the seed, builds/proves/signs transparent and Orchard transactions, broadcasts to zcashd."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints.clippy]
all = "warn"

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
bip0039 = { workspace = true }
faucet-core = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
rusqlite = { workspace = true }
secrecy = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zcash_client_backend = { workspace = true }
zcash_client_sqlite = { workspace = true }
zcash_keys = { workspace = true }
zcash_primitives = { workspace = true }
zcash_proofs = { workspace = true }
zeroize = { workspace = true }
zip32 = { workspace = true }
# Direct git dep (not via the workspace table, which holds the crates.io 0.9
# used by faucet-core/worker for wasm): the wallet engine needs the same
# librustzcash-main Network type as WalletDb.
zcash_protocol = { git = "https://github.com/zcash/librustzcash", rev = "8a0ae6537404bb95d0ce0026d14bab290910bf23" }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
