[package]
name = "faucet-worker"
version = "0.1.0"
publish = false
description = "Cloudflare Worker (Rust) faucet API: auth, OTP, rate limiting, D1, and calls to the signer."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[lints.clippy]
all = "warn"

[dependencies]
faucet-core = { path = "../crates/faucet-core" }
# worker (workers-rs), serde, serde_json are added after dependency approval is
# recorded in dependencies.md.
