[package]
name = "faucet-worker"
version = "0.1.0"
publish = false
description = "Cloudflare Worker (Rust) faucet API: auth, OTP, rate limiting, D1, and calls to the signer."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[lints.clippy]
all = "warn"

[dependencies]
faucet-core = { path = "../crates/faucet-core" }
getrandom = { version = "0.3", features = ["wasm_js"] }
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
worker = { version = "0.8.5", features = ["d1"] }
