[package]
name = "faucet-worker"
version = "0.1.0"
publish = false
description = "Cloudflare Worker (Rust) faucet API: auth, OTP, rate limiting, D1, and calls to the signer."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
faucet-core = { workspace = true }
getrandom = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
worker = { workspace = true }
