[package]
name = "faucet-addr-wasm"
version = "0.1.0"
publish = false
description = "wasm-bindgen address validator for the faucet frontend (not WebZjs)."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints.clippy]
all = "warn"

[dependencies]
faucet-core = { workspace = true }
wasm-bindgen = { workspace = true }
