[package]
name = "faucet-core"
version = "0.1.0"
description = "Shared faucet types and Zcash address validation (native + wasm32)."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints.clippy]
all = "warn"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
zcash_address = "0.12.0"
zcash_protocol = "0.9.0"
