[package]
name = "faucet-core"
version = "0.1.0"
publish = false
description = "Shared faucet types and Zcash address validation (native + wasm32)."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints.clippy]
all = "warn"

[dependencies]
serde = { workspace = true }
zcash_address = { workspace = true }
zcash_protocol = { workspace = true }
